enabled ee9 modules for startup in jetty